--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "author": "Marko Savic",
   "keywords": [
-    "tea-effect, effect, typescript, react"
+    "tea-effect",
+    "effect",
+    "typescript",
+    "react",
+    "elm-architecture"
   ],
   "description": "A RealWorld reference app demonstrating tea-effect: Elm Architecture + Effect for type-safe, testable, and scalable frontend applications.",
   "license": "MIT",
@@ -17,8 +21,11 @@
     "test": "yarn prettier && yarn checkts"
   },
   "dependencies": {
+    "@effect/platform": "^0.94.0",
+    "effect": "^3.19.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tea-effect": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
@@ -27,7 +34,6 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
     "@babel/runtime": "^7.21.5",
-    "@effect/platform": "^0.94.1",
     "@fluentui/react-components": "^9.41.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@types/react": "^18.2.4",
@@ -37,9 +43,9 @@
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
-    "effect": "^3.19.14",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -54,7 +60,6 @@
     "react-refresh": "^0.14.0",
     "reselect": "^4.1.8",
     "style-loader": "^3.3.2",
-    "tea-effect": "^0.2.0",
     "typescript": "^5.0.4",
     "url": "^0.11.0",
     "webpack": "^5.82.0",
