--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["node", "react", "react-dom"],
     "target": "ES5",
     "module": "ESNext",
     "moduleResolution": "bundler",
