--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "effect": "^3.19.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tea-effect": "0.5.1"
+    "tea-effect": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
